# 100knock-data-analytics

./: .gitignore  .gitmodules  README.md  flake.nix  pyproject.toml
.github/workflows/: static.yml
docs/: chp00.html  chp01.html  chp02.html  index.html  index.md
notebooks/: chp00.ipynb  chp00.py  chp01.ipynb  chp01.py  chp02.py  chp03.py
notebooks/02/: dump_data.csv
notebooks/03/: customer_join.csv
site/: _config.yml  chp00.html  chp01.html  chp02.html  chp03.html  index.html
site-public/: chp00.html  chp01.html  chp02.html  chp03.html  config-public.yml  index.html
site-public/marimo/: chp00.html  chp01.html  chp02.html  chp03.html
site/_layouts/: book.html
site/marimo/: chp00.html  chp01.html  chp02.html
